--- a/anaconda_jupiter.ipynb
+++ b/anaconda_jupiter.ipynb
@@ -720,11 +720,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "arr = [3,4,5]\n",
+        "for i in arr:\n",
+        "  print(i)"
+      ],
       "metadata": {
-        "id": "6qX8F9FcBXUX"
+        "id": "6qX8F9FcBXUX",
+        "outputId": "6551d932-a3f4-4b38-eff7-bb5db457b5cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "6qX8F9FcBXUX",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9P8WEmv3CzHF"
+      },
+      "id": "9P8WEmv3CzHF",
       "execution_count": null,
       "outputs": []
     }
